--- a/ps-01/wps-01.tex
+++ b/ps-01/wps-01.tex
@@ -35,7 +35,7 @@
 
 \vspace{25pt}
 
-This assignment is due Thursday 2/7 before lecture.  Please turn in neat, and organized, answers hand-written on standard-sized paper {\bf without any fringe}. The only library you're allowed to use in your answers is \verb|iostream|, though you can test with whatever you'd like. Problem set 1 is about strings, arrays, functions, and pointers, some of the most fundamental concepts in C/C++ programming.
+This assignment is due Thursday 2/7 before lecture.  Please turn in neat, and organized, answers hand-written on standard-sized paper {\bf without any fringe}.
 
 \begin{enumerate}[leftmargin=*]
 
